# PGFR

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  README.md  pyproject.toml  q  tox.ini
demo-pwa/: index.html  manifest.json  sw.js
src/pgfr/: __init__.py
src/pgfr/cli/: main.py
src/pgfr/compat/: __init__.py  pwa_generator.py  termux.py
src/pgfr/services/: content_optimizer.py  pwa_generator.py
termux-demo/: index.html  manifest.json  sw.js
test-pwa/: index.html  manifest.json  sw.js
tests/: __init__.py  test_cli.py  test_content_optimizer.py  test_interactive_cli.py  test_pwa_generator.py  test_termux_compat.py
